// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Openapi > Optional 1`] = `
{
  "required": false,
  "schema": {
    "format": "ipv6",
    "type": "string",
  },
}
`;

exports[`Openapi > Required 1`] = `
{
  "required": true,
  "schema": {
    "format": "ipv4",
    "type": "string",
  },
}
`;

exports[`Openapi > With default value 1`] = `
{
  "required": false,
  "schema": {
    "default": "1.2.3.4",
    "format": "ipv4",
    "type": "string",
  },
}
`;

exports[`Openapi > With extra infos 1`] = `
{
  "deprecated": true,
  "description": "Hello Test",
  "required": true,
  "schema": {
    "format": "ip",
    "type": "string",
  },
}
`;
